hphp/hack/test/typecheck/expression_trees/void_return_errors3.php.like_types.exp
File "void_return_errors3.php", line 6, characters 8-81:
Invalid return type (Typing[4336])
  File "void_return_errors3.php", line 6, characters 26-35:
  Expected `ExampleInt`
  File "void_return_errors3.php", line 6, characters 8-81:
  But got `void` because this function does not always return a value
File "void_return_errors3.php", line 6, characters 8-81:
This function can exit with and without returning a value (Typing[4421])
  File "void_return_errors3.php", line 8, characters 7-15:
  Returning a value here.
  File "void_return_errors3.php", line 6, characters 8-81:
  This function does not always return a value
File "void_return_errors3.php", line 8, characters 14-14:
Typing error (Typing[4110])
  File "void_return_errors3.php", line 8, characters 14-14:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
