hphp/hack/test/typecheck/expression_trees/void_return_errors3.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  Code`(ExampleBool $b): ExampleInt ==> {
    if ($b) {
      return 1;
    }
  }`;
}
